salesforce/force-app/main/default/objects/Lead/fields/AI_Priority__c.field-meta.xml
<CustomField>
  <fullName>AI_Priority__c</fullName>
  <label>AI Priority</label>
  <description></description>
  <type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Very High</fullName><default>false</default><label>Very High</label></value><value><fullName>High</fullName><default>false</default><label>High</label></value><value><fullName>Medium</fullName><default>false</default><label>Medium</label></value><value><fullName>Low</fullName><default>false</default><label>Low</label></value></valueSetDefinition></valueSet>
</CustomField>