salesforce/force-app/main/default/objects/Lead/fields/AI_Score__c.field-meta.xml
<CustomField>
  <fullName>AI_Score__c</fullName>
  <label>AI Lead Score</label>
  <description>0-100 lead score from the LeadLens model</description>
  <type>Number</type><precision>18</precision><scale>0</scale>
</CustomField>