salesforce/force-app/main/default/objects/Lead/fields/AI_Scored_At__c.field-meta.xml
<CustomField>
  <fullName>AI_Scored_At__c</fullName>
  <label>AI Scored At</label>
  <description></description>
  <type>DateTime</type>
</CustomField>