salesforce/force-app/main/default/objects/Lead/fields/Campaign_Responses__c.field-meta.xml
<CustomField>
  <fullName>Campaign_Responses__c</fullName>
  <label>Campaign Responses</label>
  <description></description>
  <type>Number</type><precision>18</precision><scale>0</scale>
</CustomField>