salesforce/force-app/main/default/objects/Lead/fields/Conversion_Probability__c.field-meta.xml
<CustomField>
  <fullName>Conversion_Probability__c</fullName>
  <label>Conversion Probability</label>
  <description></description>
  <type>Percent</type><precision>5</precision><scale>1</scale>
</CustomField>