salesforce/force-app/main/default/objects/Lead/fields/Days_Since_Created__c.field-meta.xml
<CustomField>
  <fullName>Days_Since_Created__c</fullName>
  <label>Days Since Created</label>
  <description></description>
  <type>Number</type><precision>18</precision><scale>0</scale>
</CustomField>