salesforce/force-app/main/default/objects/Lead/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
  <fullName>Days_Since_Last_Activity__c</fullName>
  <label>Days Since Last Activity</label>
  <description></description>
  <type>Number</type><precision>18</precision><scale>0</scale>
</CustomField>