salesforce/force-app/main/default/objects/Lead/fields/Email_Opens_14d__c.field-meta.xml
<CustomField>
  <fullName>Email_Opens_14d__c</fullName>
  <label>Email Opens 14d</label>
  <description></description>
  <type>Number</type><precision>18</precision><scale>0</scale>
</CustomField>