salesforce/force-app/main/default/objects/Lead/fields/Form_Fills__c.field-meta.xml
<CustomField>
  <fullName>Form_Fills__c</fullName>
  <label>Form Fills</label>
  <description></description>
  <type>Number</type><precision>18</precision><scale>0</scale>
</CustomField>