salesforce/force-app/main/default/objects/Lead/fields/Free_Email_Domain__c.field-meta.xml
<CustomField>
  <fullName>Free_Email_Domain__c</fullName>
  <label>Free Email Domain</label>
  <description></description>
  <type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>