salesforce/force-app/main/default/objects/Lead/fields/Has_Phone__c.field-meta.xml
<CustomField>
  <fullName>Has_Phone__c</fullName>
  <label>Has Phone</label>
  <description></description>
  <type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>