salesforce/force-app/main/default/objects/Lead/fields/Next_Best_Action__c.field-meta.xml
<CustomField>
  <fullName>Next_Best_Action__c</fullName>
  <label>Next Best Action</label>
  <description></description>
  <type>Text</type><length>255</length>
</CustomField>