salesforce/force-app/main/default/objects/Lead/fields/Previous_Touches__c.field-meta.xml
<CustomField>
  <fullName>Previous_Touches__c</fullName>
  <label>Previous Touches</label>
  <description></description>
  <type>Number</type><precision>18</precision><scale>0</scale>
</CustomField>