salesforce/force-app/main/default/objects/Lead/fields/Pricing_Page_Visits__c.field-meta.xml
<CustomField>
  <fullName>Pricing_Page_Visits__c</fullName>
  <label>Pricing Page Visits</label>
  <description></description>
  <type>Number</type><precision>18</precision><scale>0</scale>
</CustomField>