salesforce/force-app/main/default/objects/Lead/fields/Recommendation_Reason__c.field-meta.xml
<CustomField>
  <fullName>Recommendation_Reason__c</fullName>
  <label>Recommendation Reason</label>
  <description></description>
  <type>Text</type><length>255</length>
</CustomField>