salesforce/force-app/main/default/objects/Lead/fields/Seniority__c.field-meta.xml
<CustomField>
  <fullName>Seniority__c</fullName>
  <label>Seniority</label>
  <description>Derived from Title</description>
  <type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Individual</fullName><default>false</default><label>Individual</label></value><value><fullName>Manager</fullName><default>false</default><label>Manager</label></value><value><fullName>Director</fullName><default>false</default><label>Director</label></value><value><fullName>VP</fullName><default>false</default><label>VP</label></value><value><fullName>C-Level</fullName><default>false</default><label>C-Level</label></value></valueSetDefinition></valueSet>
</CustomField>