salesforce/force-app/main/default/objects/Lead/fields/Web_Visits_14d__c.field-meta.xml
<CustomField>
  <fullName>Web_Visits_14d__c</fullName>
  <label>Web Visits 14d</label>
  <description></description>
  <type>Number</type><precision>18</precision><scale>0</scale>
</CustomField>